--- a/inft1207w25sec11/week 6/ASS-3_part-2.css
+++ b/inft1207w25sec11/week 6/ASS-3_part-2.css
@@ -9,4 +9,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0 auto; 
+  text-align: center; 
+  font-size: 18px;
 }
