--- a/inft1207w25sec11/week 6/ASS-3_part-2.css
+++ b/inft1207w25sec11/week 6/ASS-3_part-2.css
@@ -12,4 +12,9 @@ html {
   margin: 0 auto; 
   text-align: center; 
   font-size: 18px;
+  color: white ;
+    text-shadow: 1px 1px 1px black;
+    border-radius: 10px;
+    border: 1px solid red;
+    background-color: red;
 }
