--- a/inft1207w25sec11/week 6/ASS-3_part-2.css
+++ b/inft1207w25sec11/week 6/ASS-3_part-2.css
@@ -17,4 +17,10 @@ html {
     border-radius: 10px;
     border: 1px solid red;
     background-color: red;
+    background-image: linear-gradient(
+      to bottom right,
+      transparent 0%,
+      rgba(0, 0, 0, 0.2) 30%,
+      rgba(0, 0, 0, 0.2) 100%
+    );
 }
