--- a/inft1207w25sec11/week 6/ASS-3_part-2.css
+++ b/inft1207w25sec11/week 6/ASS-3_part-2.css
@@ -23,4 +23,8 @@ html {
       rgba(0, 0, 0, 0.2) 30%,
       rgba(0, 0, 0, 0.2) 100%
     );
+    box-shadow: 
+      2px 2px 5px rgba(0, 0, 0, 0.3), 
+      inset 1px 1px 3px rgba(255, 255, 255, 0.5),
+      inset -1px -1px 3px rgba(0, 0, 0, 0.5); 
 }
