--- a/inft1207w25sec11/week 6/ASS-3_part-4.css
+++ b/inft1207w25sec11/week 6/ASS-3_part-4.css
@@ -50,6 +50,7 @@ nav a {
     width: 200px; 
 }
 
+/* My css code */
 
 .grid{
   display: grid;
@@ -61,4 +62,9 @@ nav{
   position: sticky;
     top: 0;
     z-index: 1000;
+}
+
+nav ul{
+  display: flex;
+  justify-content: space-between;
 }
