--- a/inft1207w25sec11/week 6/ASS-3_part-4.css
+++ b/inft1207w25sec11/week 6/ASS-3_part-4.css
@@ -68,3 +68,9 @@ nav ul{
   display: flex;
   justify-content: space-between;
 }
+
+.photos{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1px;
+}
