--- a/inft1207w25sec11/week 6/ASS-3_part-3.css
+++ b/inft1207w25sec11/week 6/ASS-3_part-3.css
@@ -53,24 +53,10 @@
   font-style: normal;
 }
 
-body{
-  font-family: sans-serif;
-  font-size: 10px;
-  line-height: 2;
-  letter-spacing: 1px;
-  word-spacing: 2px;
-}
-
-h1{
-  font-size: 3rem;
-  text-align: center;
-}
-
-h1,h2 {
-  font-family: 'SansSerifFont', sans-serif;
-  letter-spacing: 2px;
-}
-
-h2{
-  font-size: 2rem;
+@font-face {
+  font-family: 'SansSerifFont';
+  src: url('sans-serif-font.woff2') format('woff2'),
+       url('sans-serif-font.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 }
