--- a/inft1207w25sec11/week 6/ASS-3_part-3.css
+++ b/inft1207w25sec11/week 6/ASS-3_part-3.css
@@ -65,3 +65,8 @@ html{
   font-family: lovatoligth, serif;
   font-size: 10px;
 }
+
+h1,h2{
+  font-family: 'Courier New', Courier, monospace;
+  letter-spacing: 2px;
+}
