--- a/inft1207w25sec11/week 6/ASS-3_part-3.css
+++ b/inft1207w25sec11/week 6/ASS-3_part-3.css
@@ -84,3 +84,10 @@ h2{
 section h2 + p {
   text-align: 20px;
 }
+
+p, li{
+  font-size: 1.6rem;
+  line-height: 1.5;
+  letter-spacing: 0.5px;
+  word-spacing: 3px;
+}
