--- a/inft1207w25sec11/week 6/ASS-3_part-3.css
+++ b/inft1207w25sec11/week 6/ASS-3_part-3.css
@@ -113,3 +113,12 @@ a:focus, a:hover{
   text-decoration: none;
   color: #a66;
 }
+
+a:active{
+  color: transparent;
+  text-shadow: 0px 0px 1px red,
+               0px 0px 2px red,
+               0px 0px 3px black,
+               0px 0px 4px black;
+}
+
