--- a/inft1207w25sec11/week 6/ASS-3_part-3.css
+++ b/inft1207w25sec11/week 6/ASS-3_part-3.css
@@ -97,7 +97,7 @@ a{
   text-decoration: underline;
 }
 
-a[href="http"] {
+a[href*="http"] {
   padding-right: 19px;
   background: url(external-link-52.png) no-repeat 100% 0;
   background-size: 16px 16px;
