--- a/inft1207w25sec11/week 6/ASS-3_part-3.css
+++ b/inft1207w25sec11/week 6/ASS-3_part-3.css
@@ -137,3 +137,15 @@ nav ul{
   padding-left: 0;
   margin-bottom: 0.8rem;
 }
+
+nav li a {
+  text-decoration: none;
+  display: inline-block;
+  width: 100%;
+  line-height: 3;
+  text-align: center;
+  font-size: 2.5rem;
+  border: 1px solid #a66;
+  color: #a66;
+  margin-block: 5px;
+}
