--- a/inft1207w25sec11/week 6/ASS-3_part-3.css
+++ b/inft1207w25sec11/week 6/ASS-3_part-3.css
@@ -159,3 +159,16 @@ nav li a:active{
   color: white;
   background: black;
 }
+
+ol li a{
+  color: #a66;
+}
+
+aside ul a {
+  color: #a66;
+}
+
+aside p a{
+  color:  #a66;
+}
+
