--- a/inft1207w25sec11/week 6/ASS-3_part-3.css
+++ b/inft1207w25sec11/week 6/ASS-3_part-3.css
@@ -172,3 +172,9 @@ aside p a{
   color:  #a66;
 }
 
+nav ul li {
+  list-style-type: none; /* Removes the bullets */
+  padding: 0;            /* Removes default padding */
+  margin: 0;             /* Removes default margin */
+  
+}
