--- a/inft1207w25sec11/ASS-5/style.css
+++ b/inft1207w25sec11/ASS-5/style.css
@@ -248,3 +248,8 @@ audio {
 .comment-container li p:nth-child(2) {
   flex: 5;
 }
+
+article, footer, .secondary {
+  background-color: white;
+  color: black;
+}
