--- a/inft1207w25sec11/ASS-5/style.css
+++ b/inft1207w25sec11/ASS-5/style.css
@@ -65,7 +65,7 @@ article {
 
 div[class="nav"] {
   height: 50px;
-  background-color: ff80ff;
+  background-color: white;
   display: flex;
   padding: 1% 0;
   margin-bottom: 10px;
@@ -253,3 +253,4 @@ article, footer, .secondary {
   background-color: white;
   color: black;
 }
+
