--- a/inft1207w25sec11/ASS-5/style.css
+++ b/inft1207w25sec11/ASS-5/style.css
@@ -262,4 +262,6 @@ article, footer, .secondary {
   margin: -1px;
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 }
